<resources>
    <string name="app_name">kStubbsGeoPics</string>
    <string name="title_activity_maps">kStubbsGeoPics</string>
    <string name="title_activity_start">StartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="write_a_caption_and_choose_a_location">Write a caption and choose a location.</string>
    <string name="write_your_caption_here">Write your caption here</string>
    <string name="action_settings" />
    <string name="log_out">Log out</string>
    <string name="caption">caption</string>
    <string name="latitude">latitude:</string>
    <string name="longitude">longitude:</string>
    <string name="distance_from_center">Distance from center:</string>
</resources>