<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="edu.ucsb.cs.cs184.kstubbsgeopics.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".register.RegisterFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.28" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_guideline_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.36" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.44" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.52" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.30" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.70" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.email}"
            app:layout_constraintTop_toTopOf="@id/top_guideline_text"
            app:layout_constraintLeft_toLeftOf="@id/left_guideline_text"
            app:layout_constraintRight_toRightOf="@id/right_guideline_text"
            app:layout_constraintBottom_toTopOf="@id/middle_guideline_text" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            app:layout_constraintTop_toBottomOf="@id/middle_guideline_text"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_text"
            app:layout_constraintStart_toStartOf="@id/left_guideline_text"
            app:layout_constraintBottom_toTopOf="@+id/bottom_guideline_password" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/username"
            android:inputType="text"
            android:text="@={viewModel.username}"
            app:layout_constraintTop_toBottomOf="@id/bottom_guideline_password"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_text"
            app:layout_constraintStart_toStartOf="@id/left_guideline_text"
            app:layout_constraintBottom_toTopOf="@+id/bottom_guideline_username" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/register"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/bottom_guideline_button"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_button"
            app:layout_constraintStart_toStartOf="@id/left_guideline_button"
            app:layout_constraintTop_toBottomOf="@id/top_guideline_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>